--- a/aboutYou/index.html
+++ b/aboutYou/index.html
@@ -4,19 +4,20 @@
 <head>
     <title>John Miles</title>
     <h1>I AM JOHN MILES</h1>
+    <link href="https://fonts.googleapis.com/css?family=Ruslan+Display" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
     <link rel="stylesheet" href="john.css">
 </head>
 
 <body>
     <article>
-        <section></section>
+        <hr>
         <p>I am a Junior at Warren Central High School, Indiana. A fun fact about me is that I changed schools eight...no EIGHT
-            different times. I am part of the band at my school and I contribute as drummist. I play electric base and I
-            love
+            different times. I am part of the band at my school and I contribute as a drummist. I play electric base and
+            I love
             <em>Star wars</em> as well as
             <em>Lord of the Rings</em>.</p>
-                <img src="band.jpg" alt="band">
-        </section>
+        <img src="band.jpg" alt="band">
         <hr>
         <section>
             <h2>My Family</h2>
@@ -24,16 +25,16 @@
                 Gandalf.
             </p>
         </section>
+        <br>
         <section>
             <h2>My Goal</h2>
             <p>I aim to be a performing musician later. I am in the Drum line at my school and I intend on attending the
-                <a
-                    href="https://www.mi.edu"> Musician Institute in California.
+                <a href="https://www.mi.edu"> Musician Institute in California.
                 </a>
             </p>
         </section>
         <hr>
-        <section>
+        <aside>
             <h3>A lot of my favorite things.</h3>
             <ol type="I">
                 <li>Games</li>
@@ -45,7 +46,8 @@
                 </ol>
                 <div class="pics">
                     <img src="white john.jpg" alt="white john">
-                    <img src="Original_star_wars_logo.gif" alt="">
+                    <img src="andy-serkis-e2809cthe-lord-of-the-ringse2809d.png" alt="">
+                    <img src="cod.jpg" alt="">
                 </div>
                 <li>Desserts (This is a TOP 6 list.)</li>
                 <ol type="1">
@@ -68,17 +70,25 @@
                     </li>
                     <li>JRR Tokien</li>
                 </ol>
+                <hr>
                 <div id="Roller">
-                    <p>And I love <strong>Roller Coasters</strong> by the way.</p>
+                    <p>I love
+                        <strong>Roller Coasters</strong> by the way. Also, I speak
+                        <em>German</em>.My favorite rapper is
+                        <em>Eminem</em>.
+                    </p>
+                </div>
+                <hr>
+                <div id="quote">
+                    <p>"SPEND YOUR TIME DOING WEIRD THINGS WITH WEIRD PEOPLE"</p>
                 </div>
             </ol>
-        </section>
+        </aside>
     </article>
     <hr>
     <footer>
+        <br> This page has been designed by Jeff Priso and solely used for classwork purposes.
         <br>
-        <br>
-        This page has been designed by Jeff Priso and solely used for classwork purposes.
     </footer>
 
     <hr>
